--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
-baseURL: 'https://example.org/'
-languageCode: 'en-us'
+baseURL: 'https://operatingpatterns.org'
+languageCode: 'en-gb'
 title: 'NHS Operating Patterns'
 subtitle: 'Testing'
 theme: 'hextra'
